--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Chemical Table</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <link rel="stylesheet" href="style.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
 </head>
@@ -14,7 +15,6 @@
     <button class="add-btn" title="Add Row"><i class="fas fa-plus"></i></button>
     <button class="down-btn" title="Move Row Down"><i class="fas fa-arrow-down"></i></button>
     <button class="up-btn" title="Move Row Up"><i class="fas fa-arrow-up"></i></button>
-    
     <button class="delete-btn" title="Delete Row"><i class="fas fa-trash"></i></button>
     <button class="refresh-btn" title="Refresh Data"><i class="fas fa-sync"></i></button>
     <button class="save-btn" title="Save Data"><i class="fas fa-save"></i></button>
