--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Chemical Table</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
 </head>
 <body>
   <div class="header">
-   <div><h2>Chemical Supplies</h1></div> 
-
+   <div><h2>Chemical Supplies</h2></div> 
    <div class="toolbar">
     <button class="add-btn" title="Add Row"><i class="fas fa-plus"></i></button>
     <button class="down-btn" title="Move Row Down"><i class="fas fa-arrow-down"></i></button>
@@ -26,8 +25,8 @@
         <th>id</th>
         <th>Chemical name</th>
         <th>Vendor</th>
-        <th>Density <br> <h6>g/m3</h6></th>
-        <th>Viscosity <br><h6>m2/s</h5></th>
+        <th>Density <br> <span>kg/m3</span></th>
+        <th>Viscosity <br><span>m2/s</span></th>
         <th>Packaging</th>
         <th>Pack size</th>
         <th>Unit</th>
